feat: add get replay list on handler
