# protos/gotocompany/optimus/core/v1beta1/replay.swagger.json
@@ -22,6 +22,34 @@
   ],
   "paths": {
     "/v1beta1/project/{projectName}/replay": {
+      "get": {
+        "operationId": "ReplayService_ListReplay",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1beta1ListReplayResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "projectName",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "ReplayService"
+        ]
+      },
       "post": {
         "operationId": "ReplayService_Replay",
         "responses": {
@@ -116,10 +144,46 @@
         }
       }
     },
+    "v1beta1ListReplayResponse": {
+      "type": "object",
+      "properties": {
+        "replays": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/v1beta1ReplaySpecification"
+          }
+        }
+      }
+    },
     "v1beta1ReplayResponse": {
       "type": "object",
       "properties": {
         "id": {
+          "type": "string"
+        }
+      }
+    },
+    "v1beta1ReplaySpecification": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "jobName": {
+          "type": "string"
+        },
+        "startTime": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "endTime": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "description": {
+          "type": "string"
+        },
+        "status": {
           "type": "string"
         }
       }
